[package]
name = "eternalreckoning-server"
version = "0.1.0"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"

[features]
default = [
    "uuid/v4",
]

[dependencies]
eternalreckoning-core = { version = "0.1.0", path = "../core" }

bytes = "0.4"
chrono = "0.4"
failure = "0.1"
fern = "0.5"
futures = "0.1"
log = "0.4"
nalgebra = "0.18"
serde = { version = "1.0", features = ["derive"] }
specs = "0.15"
tokio = "0.1"
tokio-codec = "0.1"
uuid = "0.7"