[package]
name = "eternalreckoning-server"
version = "0.2.0"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"
default-run = "eternalreckoning-server"

[features]
default = [
    "uuid/v4",
]

[dependencies]
eternalreckoning-core = { git = "https://github.com/EternalReckoning/core", tag = "v0.2.1" }

bytes = "0.4"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
log = "0.4"
nalgebra = "0.19"
serde = { version = "1.0", features = ["derive"] }
specs = "0.15"
tokio = "0.1"
tokio-codec = "0.1"
uuid = "0.8"